welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: type mismatch;
 found   : Unit
 required: Boolean
  }while (compteur= 5)
                  ^